# ChatserverBaseofNginx

./: CMakeLists.txt  README.md
include/: public.hpp
include/client/: client.hpp
include/server/: chatserver.hpp  chatservice.hpp
include/server/dataoperate/: group.hpp  groupoperate.hpp  offlinemsgoperate.hpp  user.hpp  useroperate.hpp
include/server/db/: db.hpp
include/server/redis/: redis.hpp
src/client/: CMakeLists.txt  client.cpp  mian.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  mian.cpp
src/server/dataoperate/: groupoperate.cpp  offlinemsgoperate.cpp  useroperate.cpp
src/server/db/: db.cpp
src/server/redis/: redis.cpp
